# Youtube-MCP

./: .gitignore  README.md  requirements.txt
retrive_data/: add_youtube_data.py
youtube/: main.py  pyproject.toml
